<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/perfil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_guias"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".Perfil">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datosPerfil"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/nombreDatos"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/telefonoDatos"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/emailDatos"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/black"
                android:textSize="15dp" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_eliminarPerfil"
                android:text="@string/eliminarCuenta"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/modificarDatos"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:text="@string/click_Modificar_Datos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>