<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_guias"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".EliminarPerfil">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/custom_edittext">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/ConfirmacionEliminarPerfil"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/avisoEliminarPerfil"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:textStyle="bold" />


            <ProgressBar
                android:id="@+id/progressBar"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_eliminarPerfil_confirmacion"
                android:text="@string/eliminarCuenta"
                android:textSize="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_Cancelar_eliminar_perfil"
                android:text="@string/cancelar"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>